welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:40: error: not found: value fairemotif
for (tour<- 1 to 3) {fairemotif() }
                     ^